[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Sound_Effect_Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/victory_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/victory_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/game_over_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/game_over_2.png" type="Texture" id=6]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sound_Effect_Player" type="AudioStreamPlayer" parent="."]
script = ExtResource( 2 )

[node name="Victory_1" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="Victory_2" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="Game_Over_1" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 5 )
centered = false

[node name="Game_Over_2" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 6 )
centered = false

[node name="Tiles" type="CanvasLayer" parent="."]
layer = 3
